--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@alephium/web3": "^1.10.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -28,18 +29,25 @@
     "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^6.0.1",
     "axios": "^1.7.9",
+    "blakejs": "^1.2.1",
+    "bs58": "^6.0.0",
     "discord.js": "^14.16.3",
+    "elliptic": "^6.6.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "undici": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bs58": "^4.0.4",
+    "@types/elliptic": "^6.4.18",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.17.9",
+    "@types/node-fetch": "^2.6.12",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
